--- a/index.html
+++ b/index.html
@@ -8,15 +8,23 @@
 </head>
 <body>
      <header>
-           <nav>
-               <h3>G3 Architects</h3>
-               <ul>
+           <nav class="nav-bar">
+               <h3 class="nav-title">G3 Architects</h3>
+               <ul class="nav-links">
                    <li><a href="">Home</a></li>
                    <li><a href="">About</a></li>
                    <li><a href="">Contact Us</a></li>
                    <li><a href="">LogIn</a></li>
                </ul>
            </nav>
+           <!-- banner-section -->
+           <div class="banner">
+           <div class="banner-content"> <h1 class="banner-title">Brand New Group of Architects</h1>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="primary-btn">Explore More</button>
+        </div>
+        <img src="./images/banner.png" alt="">
+           </div>
      </header>
      <main></main>
      <footer></footer>
