fact container added with responsive

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
            </div>
      </header>
      <main>
-        <!-- feature-section -->
-           <section class="feature-section">
+        <!--team-section -->
+           <section class="team-section">
                 <div class="teams-container">
                     <div class="team-img-container">
                          <img src="./images/team1.png" alt="">
@@ -42,6 +42,38 @@
                             <button class="primary-btn">Explore More</button>
                     </div>
                 </div>
+           </section>
+
+           <!-- featured-section -->
+           <section class="featured-section"></section>
+
+           <!-- fact-section -->
+           <section class="fact-section">
+               <h3 class="fact-title">Some Facts</h3>
+               <p class="fact-description">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+               <div class="fact-card-container">
+                <div class="card">
+                    <img src="./images/icons/ribon.png" alt="">
+                    <h2 class="card-states">54</h2>
+                    <p class="card-title">Awards Winnings</p>
+                   </div>
+                   <div class="card">
+                    <img src="./images/icons/projects.png" alt="">
+                    <h2 class="card-states">1458</h2>
+                    <p class="card-title">Project Finished</p>
+                   </div>
+                   <div class="card">
+                    <img src="./images/icons/customers.png" alt="">
+                    <h2 class="card-states">590</h2>
+                    <p class="card-title">Clients Worked</p>
+                   </div>
+                   <div class="card">
+                    <img src="./images/icons/email.png" alt="">
+                    <h2 class="card-states">22578</h2>
+                    <p class="card-title">Email Send</p>
+                   </div>
+               </div>
+             
            </section>
      </main>
      <footer></footer>
