--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@
                </div>
              
            </section>
+
+           <!-- sponspor-section -->
+           <section class="sponsor-section">
+               <h3 class="sponspor-title">Our Sponspors</h3>
+               <p class="sponspor-description">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+               <div class="sponspor-logo">
+                <img src="./images/sponsors/spotify.png" alt="">
+                <img src="./images/sponsors/amazon.png" alt="">
+                <img src="./images/sponsors/google.png" alt="">
+                <img src="./images/sponsors/telerama.png" alt="">
+                <img src="./images/sponsors/figma.png" alt="">
+               </div>
+           </section>
      </main>
      <footer></footer>
 </body>
