footer section added with responsive

--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
                </div>
            </section>
      </main>
-     <footer></footer>
+     <footer>
+         <div class="footer-section">
+            <p class="footer-description"><small>All rights reserved copyright@2023 startup landing page design</small></p>
+         </div>
+     </footer>
 </body>
 </html>
