--- a/index.html
+++ b/index.html
@@ -45,7 +45,38 @@
            </section>
 
            <!-- featured-section -->
-           <section class="featured-section"></section>
+           <section class="featured-section">
+                   <div class="feature-content">
+                    <h3 class="feature-ttitle">Features you will love & enjoy</h3>
+                    <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+
+                    <div class="card">
+                        <h4 class="card-title">Dexktop & Mobile Version</h4>
+                        <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="card">
+                        <h4 class="card-title">Drag & Drop Builder</h4>
+                        <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="card">
+                        <h4 class="card-title">Awesome Modern Design</h4>
+                        <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="card">
+                        <h4 class="card-title">Super Easy to Edit</h4>
+                        <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    
+              
+                   </div>
+                   <div class="feature-img">
+                      <img class="feature-image" src="./images/architect.png" alt="">
+                      <div class="ten-years-badge">
+                        <h2>10+Year</h2>
+                        <p>Experience</p>
+                      </div>
+                   </div>
+           </section>
 
            <!-- fact-section -->
            <section class="fact-section">
